<resources>
    <string name="app_name">GetQd</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="GQStartActivity_FacebookLoginText">Facebook Login</string>
    <string name="GQStartActivity_EmailLoginText">Email Login</string>
    <string name="GQStartActivity_RegisterText">Register</string>
    <string name="GQStartActivity_ForgotLoginText">Forgot Login?</string>
    <string name="GQStartActivity_EmailText">Email</string>
    <string name="GQStartActivity_PasswordText">Password</string>
    <string name="GQStartActivity_LoginText">Login</string>
    <string name="GQProfileActivity_RegisterText">Register</string>
    <string name="GQProfileActivity_CancelText">Cancel</string>
    <string name="GQProfileActivity_RegistrationText">REGISTRATION</string>
    <string name="GQBase_URL">https://beta.getqd.me/</string>
    <string name="title_section1">Profile</string>
    <string name="title_section2">Venue</string>
    <string name="title_section3">Event</string>
    <string name="title_section4">Ticket</string>
    <string name="title_section5">Staff</string>
    <string name="title_section6">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_gqprofile">GQProfileActivity</string>
    <string name="title_activity_gqmain">GQMainActivity</string>
    <string name="GQStaffResv_ReserveButtonText">Reserve</string>
    <string name="GQStaffResv_CancelText">Cancel</string>
    <string name="GQPStaffResv_Text">  BOOK GUEST  </string>
    <string name="title_activity_gqbook_guest">GQBookGuestActivity</string>
    <string name="GQStaffBookGuestDateButtonText">July 30,2015</string>
    <string name="GQStaffBookGuestTimeButtonText">7:00PM</string>
    <string name="GQStaffBookGuestDateAndTime1">Reservation Date/Time - Click to Change</string>
    <string name="GQStaffBookGuestDateAndTime2">(Click to Change)</string>
    <string name="GQStaffBookGuestPartySize">How Many In Your Party?</string>
    <string name="GQStaffBookGuestPartyReason">Reason</string>
    <string name="GQStaffBookGuestPartyDetails">Details</string>
    <string name="Frag_Target_Profile">Profile</string>
    <string name="Frag_Target_Venues">Venues</string>
    <string name="Frag_Target_Events">Events</string>
    <string name="Frag_Target_Tickets">Tickets</string>
    <string name="Frag_Target_Staff">Staff</string>
    <string name="Frag_Target_Logout">Logout</string>
    <string name="reason_prompt">Reason for Reservation</string>
    <string name="GQReservations">Reservations</string>
    <string name="GQMyReservations">My Reservations</string>
    <string name="GQReservationsSpecialDetails">Special Detail Requests</string>
    <string name="GQStatistics">Statistics</string>
    <string name="GQSales">Sales</string>
    <string name="GQStats_Tally_Booked">0</string>
    <string name="GQStats_Tally_Checked_In">0</string>
    <string name="GQStats_Tally_Booked_Text">Total Booked</string>
    <string name="GQStats_Tally_Checked_In_Text">Total Checked In</string>
    <string name="GQSellTickets">Sell Tickets</string>
    <string name="title_activity_gqcard_io">GQCardIO</string>
    <string name="multiplelines">Line 1 \n Line 2</string>
    <string name="ConfigMode">Large</string>
    <string name="GQMainActivity_Title">Home</string>
    <string name="toolbar_title">Menu</string>
    <string name="profile_label">My Profile</string>
    <string name="login_label">Please Login</string>
    <string name="home_label">Home</string>
    <string name="book_guest_label">Book a Reservation</string>
    <string name="my_resos_label">My Reservations</string>
    <string name="stats_summary_label">Event Stats Summary</string>
    <string name="event_stats_label">Event Stats</string>
    <string name="select_tickets_activity">Select Tickets</string>
    <string name="events_label">Events</string>
    <string name="credit_card_label">Credit Card</string>
    <string name="interac_label">Interac</string>
    <string name="complimentary_label">Complimentary</string>
    <string name="my_tickets_label">My Tickets</string>
    <string name="wait_list_label">My Wait List</string>
    <string name="confirm_logout_label">Confirm Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_venue">Venues</string>
    <string name="nav_item_events">Events</string>
    <string name="nav_item_my_tickets">My Tickets</string>
    <string name="nav_item_logout">Logout</string>
    <string name="reservation_created_toast">Reservation created!</string>
  <string name="app_picker_name">Applications</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product search</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="history_clear_text">Clear history</string>
  <string name="history_clear_one_history_text">Clear</string>
  <string name="history_email_title">Barcode Scanner history</string>
  <string name="history_empty">Empty</string>
  <string name="history_empty_detail">No barcode scans have been recorded</string>
  <string name="history_send">Send history</string>
  <string name="history_title">History</string>
  <string name="menu_encode_mecard">Use MECARD</string>
  <string name="menu_encode_vcard">Use vCard</string>
  <string name="menu_help">Help</string>
  <string name="menu_history">History</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_error">Error</string>
  <string name="msg_google_books">Google</string>
  <string name="msg_google_product">Google</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_invalid_value">Invalid value</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_results">Results</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_sure">Are you sure?</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_auto_focus_title">Use auto focus</string>
  <string name="preferences_auto_open_web_title">Open web pages automatically</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
  <string name="preferences_decode_1D_product_title">1D Product</string>
  <string name="preferences_decode_Aztec_title">Aztec</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
  <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
  <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
  <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
  <string name="preferences_disable_exposure_title">No exposure</string>
  <string name="preferences_disable_metering_title">No metering</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
  <string name="preferences_front_light_title">Use front light</string>
  <string name="preferences_front_light_auto">Automatic</string>
  <string name="preferences_front_light_off">Off</string>
  <string name="preferences_front_light_on">On</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_history_summary">Store your scans in History</string>
  <string name="preferences_history_title">Add to History</string>
  <string name="preferences_invert_scan_title">Invert scan</string>
  <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
  <string name="preferences_name">Settings</string>
  <string name="preferences_orientation_title">No automatic rotation</string>
  <string name="preferences_play_beep_title">Beep</string>
</resources>