<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/herbbackground"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    tools:context=".MainActivity">


    <ViewFlipper
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewFlipper1"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:layout_gravity="bottom"
        android:layout_marginBottom="150dp">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/GQStartActivity_buttonFB"
                android:layout_height="35dp"
                android:layout_width="200dp"
                android:textColor="@color/white"
                android:background="@color/GQColor"
                android:layout_marginBottom="5dp"
                android:text="@string/GQStartActivity_FacebookLoginText" />

            <Button
                android:id="@+id/GQStartActivity_buttonEL"
                android:layout_width="200dp"
                android:textColor="@color/white"
                android:background="@color/GQColor"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:text="@string/GQStartActivity_EmailLoginText" />

            <Button
                android:id="@+id/GQStartActivity_buttonRE"
                android:layout_width="200dp"
                android:textColor="@color/white"
                android:background="@color/GQColor"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:text="@string/GQStartActivity_RegisterText" />

            <Button
                android:id="@+id/GQStartActivity_buttonFLUNUSED"
                android:layout_width="200dp"
                android:textColor="@color/white"
                android:background="@color/GQColor"
                android:layout_height="35dp"
                android:text="@string/GQStartActivity_ForgotLoginText" />

            <Button
                android:id="@+id/GQStartActivity_buttonFLUNUSED2"
                android:layout_width="200dp"
                android:textColor="@color/white"
                android:background="@color/GQColor"
                android:layout_height="35dp"
                android:text="@string/GQStartActivity_ForgotLoginText" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <ImageButton
                android:id="@+id/GQStartActivity_imageButton1"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:background="@color/white"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/back_arrow2x" />

            <EditText
                android:id="@+id/GQStartActivity_textEmail"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:background="@color/white"
                android:singleLine="true"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress"
                android:hint="@string/GQStartActivity_EmailText" />

            <EditText
                android:id="@+id/GQStartActivity_textPassword"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:background="@color/white"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"
                android:hint="@string/GQStartActivity_PasswordText" />


            <Button
                android:id="@+id/GQStartActivity_buttonLogin"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:textColor="@color/white"
                android:background="@color/GQColor"
                android:text="@string/GQStartActivity_LoginText" />

            <Button
                android:id="@+id/GQStartActivity_buttonFL"
                android:layout_width="200dp"
                android:textColor="@color/gray"
                android:background="@color/white"
                android:layout_height="35dp"
                android:text="Forgot Password?" />


        </LinearLayout>


    </ViewFlipper>

</RelativeLayout>


