<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"

    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20px">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/GQProfileActivity_CancelText"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="left"
            android:gravity="left"
            android:id="@+id/RegCancelButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/GQProfileActivity_RegistrationText"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/textView1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="right"
            android:background="@color/GQColor"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="0dp"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:text="@string/GQProfileActivity_RegisterText"
            android:id="@+id/RegisterButton" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_photo_icon2x"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:id="@+id/imageViewProfile" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="First/Last Name"
        android:id="@+id/REGFirstLastName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="Email (will be verified)"
        android:id="@+id/RegEmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="Mobile Number"
        android:id="@+id/RegMobileNumber" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center"
        android:hint="Password"
        android:id="@+id/RegPassword"
        android:password="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="Re-Enter Password"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:id="@+id/RegReEnterPassword"
        android:password="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="City"
        android:id="@+id/RegCity" />
</LinearLayout>

